--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 S3method(sum,g)
 S3method(sum,haps)
-export()
 export(add.geno)
 export(aux.in)
 export(aux.in1)
@@ -42,7 +41,6 @@ export(list.help)
 export(mat.col)
 export(mat.cond)
 export(name)
-export(p.hap.pair.dt)
 export(p.hap.pair.s)
 export(prop_het)
 export(rec.guess)
@@ -61,8 +59,6 @@ export(sw.no.gt)
 export(tag.noGT)
 export(tot.ase_counts)
 export(treat.form)
-export(u.hap.pairs)
-export(u.hap.pairs2)
 export(unload.ddl)
 export(var.e)
 export(var.eg)
@@ -72,6 +68,7 @@ export(vcf_cl)
 export(vcf_w)
 import(GUESSFM)
 import(Rcpp)
+import(addstrings)
 import(data.table)
 import(methods)
 importFrom(rstan,sampling)
