--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ SystemRequirements: GNU make
 RoxygenNote: 7.1.2
 Remotes:
     Alanocallaghan/GUESSFM@groups,
-    gitlab:evigorito/addstrings
+    gitlab::evigorito/addstrings
 Language: en-GB
 Suggests: 
     knitr,
