--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,6 +2,10 @@ on: [push, pull_request]
 
 name: R-CMD-check
 
+env: 
+  GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
+
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
