--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c("remotes", "rcmdcheck", "curl"))
+          install.packages(c("remotes", "rcmdcheck", "curl", "devtools"))
           remotes::install_deps(dependencies = TRUE)
           devtools::install(".")
         shell: Rscript {0}
