--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -34,14 +34,19 @@ jobs:
       #     Rscript -e "remotes::install_github('r-hub/sysreqs')"
       #     sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
       #     sudo -s eval "$sysreqs"
+      
+      - name: Install mac dependencies
+        if: runner.os == 'macOS'
+        run: |
+          brew install gsl
 
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck", "curl", "devtools"))
           remotes::install_deps(dependencies = TRUE)
-          devtools::install(".")
         shell: Rscript {0}
 
+      # devtools::install(".")
       - name: Session info
         run: |
           options(width = 100)
