--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,4 +72,18 @@ import(addstrings)
 import(data.table)
 import(methods)
 importFrom(rstan,sampling)
+importFrom(rstantools,rstan_config)
+importFrom(stats,dt)
+importFrom(stats,end)
+importFrom(stats,fisher.test)
+importFrom(stats,line)
+importFrom(stats,qlogis)
+importFrom(stats,reshape)
+importFrom(stats,sd)
+importFrom(stats,setNames)
+importFrom(stats,start)
+importFrom(stats,var)
+importFrom(utils,capture.output)
+importFrom(utils,head)
+importFrom(utils,write.table)
 useDynLib(baseqtl, .registration = TRUE)
