Try basilisking stuff

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,9 @@ Imports:
     Matrix,
     parallel,
     addstrings,
-    posterior
-LinkingTo: 
+    posterior,
+    basilisk
+LinkingTo:
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
     RcppEigen (>= 0.3.3.3.0),
