--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ import(Rcpp)
 import(addstrings)
 import(data.table)
 import(methods)
+importFrom(basilisk,BasiliskEnvironment)
 importFrom(rstan,sampling)
 importFrom(rstantools,rstan_config)
 importFrom(stats,dt)
