--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,9 @@ import(addstrings)
 import(data.table)
 import(methods)
 importFrom(basilisk,BasiliskEnvironment)
+importFrom(basilisk,basiliskRun)
+importFrom(basilisk,basiliskStart)
+importFrom(basilisk,basiliskStop)
 importFrom(rstan,sampling)
 importFrom(rstantools,rstan_config)
 importFrom(stats,dt)
